# medical-desert-france

./: .env.example  .env.local.example  .gitignore  CONTRIBUTING.md  Dockerfile.api  Dockerfile.dashboard  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  local.db  mlflow.db  pyproject.toml
.github/workflows/: ci.yml
dashboard/: app.js  index.html  nginx.conf  styles.css
dashboard/assets/: departments.geojson
data/: sample_communes.csv
deploy/helm/: Chart.yaml  values-local.yaml  values.yaml
deploy/helm/templates/: _helpers.tpl  api-deployment.yaml  api-service.yaml  configmap.yaml  dashboard-deployment.yaml  dashboard-service.yaml  ingress.yaml  jobs.yaml  mlflow.yaml  secret.yaml  serviceaccount.yaml
docs/: api.md  architecture.md  data.md  deployment.md
infra/opentofu/examples/aks/: main.tf  outputs.tf  variables.tf
infra/opentofu/examples/eks/: main.tf  variables.tf
infra/opentofu/examples/gke/: main.tf  outputs.tf  variables.tf
infra/opentofu/modules/aks/: main.tf  outputs.tf  variables.tf  versions.tf
infra/opentofu/modules/eks/: main.tf  outputs.tf  variables.tf
infra/opentofu/modules/gke/: main.tf  outputs.tf  variables.tf  versions.tf
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
src/medical_desert_france/: __init__.py  api.py  cli.py  config.py  db.py  models.py  schemas.py
src/medical_desert_france/ml/: features.py  predict.py  train.py
tests/: test_api.py  test_features.py
