[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medical-desert-france"
version = "0.1.0"
description = "Simple ML and Kubernetes-first MLOps project for French medical-access risk."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Medical Desert France contributors" }]
dependencies = [
  "alembic>=1.13",
  "fastapi>=0.111",
  "httpx>=0.27",
  "joblib>=1.4",
  "mlflow>=2.13",
  "numpy>=1.26",
  "pandas>=2.2",
  "psycopg[binary]>=3.1",
  "pydantic-settings>=2.3",
  "python-dotenv>=1.0",
  "scikit-learn>=1.5",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.4",
]

[project.scripts]
mdf = "medical_desert_france.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
